<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/signup_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="-16dp"
        android:src="@drawable/signup_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/signup_page_bg_content_description" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="168dp"
        android:text="@string/loginTitle"
        android:textColor="@color/PageTitle"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_id"
        style="@style/TextInputLayoutStyle"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="253dp"
        app:hintTextColor="@color/PageTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email1"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Pword"
        style="@style/TextInputLayoutStyle"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="55dp"
        app:hintTextColor="@color/PageTitle"
        app:layout_constraintEnd_toEndOf="@+id/email_id"
        app:layout_constraintStart_toStartOf="@+id/email_id"
        app:layout_constraintTop_toBottomOf="@+id/email_id">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password1"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/password"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/login_Button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/text_field_corner"
        android:text="@string/login_btn"
        android:textSize="20sp"
        android:layout_marginTop="46dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Pword" />

    <TextView
        android:id="@+id/signup_redirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/don_t_have_an_account"
        app:layout_constraintEnd_toEndOf="@+id/login_Button"
        app:layout_constraintStart_toStartOf="@+id/login_Button"
        app:layout_constraintTop_toBottomOf="@id/login_Button" />
    <TextView
        android:id="@+id/login_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_with_socials"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_redirection"
        android:layout_marginTop="25dp"
        />

    <Button
        android:id="@+id/outlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:iconSize="20dp"
        android:text="@string/google"
        style="?attr/materialButtonOutlinedStyle"
        app:layout_constraintTop_toBottomOf="@id/login_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>