<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:layout_marginTop="25dp"
        android:textColor="@color/PageTitle"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/signup_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="-16dp"
        android:src="@drawable/signup_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/signup_page_bg_content_description" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_id"
        style="@style/TextInputLayoutStyle"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="196dp"
        app:hintTextColor="@color/PageTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fname"
        style="@style/TextInputLayoutStyle"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="55dp"
        app:hintTextColor="@color/PageTitle"
        app:layout_constraintEnd_toEndOf="@+id/email_id"
        app:layout_constraintStart_toStartOf="@+id/email_id"
        app:layout_constraintTop_toBottomOf="@+id/email_id">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/first_name"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Lname"
        style="@style/TextInputLayoutStyle"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="55dp"
        app:hintTextColor="@color/PageTitle"
        app:layout_constraintEnd_toEndOf="@+id/email_id"
        app:layout_constraintStart_toStartOf="@+id/email_id"
        app:layout_constraintTop_toBottomOf="@+id/fname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/last_name"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Pword"
        style="@style/TextInputLayoutStyle"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="55dp"
        app:hintTextColor="@color/PageTitle"
        app:layout_constraintEnd_toEndOf="@+id/email_id"
        app:layout_constraintStart_toStartOf="@+id/email_id"
        app:layout_constraintTop_toBottomOf="@+id/Lname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/password"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/terms_and_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="35dp"
        android:layout_marginEnd="30dp"
        android:text="@string/by_clicking_you_agree_to_our_terms_amp_conditions"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Pword" />

    <Button
        android:id="@+id/signUp_Button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/text_field_corner"
        android:text="@string/sign_up"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/terms_and_condition" />

    <TextView
        android:id="@+id/signup_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_with_socials"
        app:layout_constraintTop_toBottomOf="@id/signUp_Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/outlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:iconSize="20dp"
        android:text="@string/google"
        style="?attr/materialButtonOutlinedStyle"
        app:layout_constraintTop_toBottomOf="@id/signup_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>